# C---File-System

./: .gitignore  CMakeLists.txt  Dockerfile  TODO.md  client  client.cpp  makefile  server  server.cpp
.github/workflows/: ci.yml
client/: client  client.cpp  client_serverDir.cpp  client_upload.cpp
client_directory/: montreal.txt
clientfiles/: file1.txt
include/: client_serverDir.h  client_upload.h  server_directory.h  server_upload.h
makeBuild/: client  server
server/: server  server.cpp  server_directory.cpp  server_upload.cpp
server_directory/: city_copy.txt  mt_3.txt  mt_mk_2.txt  mt_mk_3.txt  v.txt  yeah.txt
tests/: clientTests.cpp  clientTestsTemplate.cpp
